feat(install): change installation config API to return separate defaults
